# S107-PROJECT

./: .env  .gitignore  Dockerfile.jenkins  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: tarefas.json
scripts/: notificar.py
src/: gerenciador.py
src/repositories/: __init__.py  base.py  json_repo.py  postgres_repo.py
tests/: conftest.py  test_gerenciador_cobertura.py  test_gerenciador_persistencia.py
