[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gerenciador-tarefas-academicas"
version = "1.0.0"
description = "Projeto acadêmico com pipeline CI/CD, testes automatizados, build e deploy"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov=main",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["src", "main"]
omit = [
    "src/repositories/postgres_repo.py",
    "src/repositories/base.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]